Implicit function declaration in jni_util.c

XMLWordPrintable

    • master

        ../../../src/share/native/common/jni_util.c: In function 'JNU_ThrowByNameWithMessageAndLastError':
        ../../../src/share/native/common/jni_util.c:160:16: error: implicit declaration of function 'getLastErrorString'; did you mean 'JVM_GetLastErrorString'? [-Werror=implicit-function-declaration]
             size_t n = getLastErrorString(buf, sizeof(buf));
                        ^~~~~~~~~~~~~~~~~~
                        JVM_GetLastErrorString

        8157749 introduced use of GetLastErrorString in jni_util.c, but didn't add an include for io_util.h where it is declared

              Assignee:
              Andrew Hughes
              Reporter:
              Andrew Hughes
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: