8205587: Implicit function declaration in jni_util.c Reviewed-by: omajid