src/share/native/common/jni_util.c
@@ -27,8 +27,7 @@
 #include <string.h>
 
 #include "jvm.h"
-#include "jni.h"
-#include "jni_util.h"
+#include "io_util.h"
 
 /* Due to a bug in the win32 C runtime library strings
  * such as "z:" need to be appended with a "." so we
